; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/extr_core_ed25519.c_crypto_core_ed25519_scalar_negate.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_core/ed25519/extr_core_ed25519.c_crypto_core_ed25519_scalar_negate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@crypto_core_ed25519_NONREDUCEDSCALARBYTES = common dso_local global i32 0, align 4
@crypto_core_ed25519_SCALARBYTES = common dso_local global i32 0, align 4
@L = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_core_ed25519_scalar_negate(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @crypto_core_ed25519_NONREDUCEDSCALARBYTES, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i32, i32* @crypto_core_ed25519_NONREDUCEDSCALARBYTES, align 4
  %13 = zext i32 %12 to i64
  %14 = alloca i8, i64 %13, align 16
  store i64 %13, i64* %7, align 8
  %15 = load i32, i32* @crypto_core_ed25519_NONREDUCEDSCALARBYTES, align 4
  %16 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %17 = mul nsw i32 2, %16
  %18 = icmp sge i32 %15, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @COMPILER_ASSERT(i32 %19)
  %21 = trunc i64 %9 to i32
  %22 = call i32 @memset(i8* %11, i32 0, i32 %21)
  %23 = trunc i64 %13 to i32
  %24 = call i32 @memset(i8* %14, i32 0, i32 %23)
  %25 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %11, i64 %26
  %28 = load i8*, i8** @L, align 8
  %29 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %30 = call i32 @memcpy(i8* %27, i8* %28, i32 %29)
  %31 = load i8*, i8** %4, align 8
  %32 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %33 = call i32 @memcpy(i8* %14, i8* %31, i32 %32)
  %34 = trunc i64 %9 to i32
  %35 = call i32 @sodium_sub(i8* %11, i8* %14, i32 %34)
  %36 = call i32 @sc25519_reduce(i8* %11)
  %37 = load i8*, i8** %3, align 8
  %38 = load i32, i32* @crypto_core_ed25519_SCALARBYTES, align 4
  %39 = call i32 @memcpy(i8* %37, i8* %11, i32 %38)
  %40 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %40)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @COMPILER_ASSERT(i32) #2

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @sodium_sub(i8*, i8*, i32) #2

declare dso_local i32 @sc25519_reduce(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
